@@ -1,5 +1,7 @@
 
 6.34  2015-11-27
+  - Improved Hypnotoad to report problems that have occured during the creation
+    of listen sockets.
   - Fixed bug in Mojo::DOM where the wrap method would attempt to wrap an
     HTML/XML fragment around the content of root nodes.
   - Fixed bug in Mojo::DOM where the wrap_content method would attempt to wrap
